--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.9",
     "@tanstack/react-table": "^8.20.5",
+    "@types/react-select": "^5.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
