--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://DogukanErzurum.github.io/finance",
   "name": "finance",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +11,9 @@
     "db:generate": "drizzle-kit generate:pg --schema db/schema.ts --out ./drizzle",
     "db:migrate": "bun ./scripts/migrate.ts",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "ts-node ./scripts/seed.ts"
+    "db:seed": "ts-node ./scripts/seed.ts",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@clerk/backend": "^1.13.9",
@@ -68,6 +71,7 @@
     "drizzle-kit": "^0.25.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "gh-pages": "^6.2.0",
     "pg": "^8.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
