--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://DogukanErzurum.github.io/finance",
   "name": "finance",
   "version": "0.1.0",
   "private": true,
@@ -11,9 +10,7 @@
     "db:generate": "drizzle-kit generate:pg --schema db/schema.ts --out ./drizzle",
     "db:migrate": "bun ./scripts/migrate.ts",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "ts-node ./scripts/seed.ts",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "db:seed": "ts-node ./scripts/seed.ts"
   },
   "dependencies": {
     "@clerk/backend": "^1.13.9",
@@ -71,7 +68,6 @@
     "drizzle-kit": "^0.25.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "gh-pages": "^6.2.0",
     "pg": "^8.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
